# astrodata-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: live.yml  publish.yml  tests.yml
docs/: DEMO.md  HANDOFF.md
examples/: demo.py
src/astrodata_mcp/: __init__.py  extras.py  server.py
src/astrodata_mcp/core/: __init__.py  adql.py  citations.py  config.py  epoch.py  query.py  results.py  schema.py  tap.py
src/astrodata_mcp/services/: __init__.py  crossmatch.py  eso.py  eso_secondary.py  external.py  gaia.py  keck_koa.py  magellan_archive.py  project.py  simbad.py  vizier.py
tests/: __init__.py  test_adql.py  test_epoch.py  test_parsing.py  test_properties.py  test_smoke.py  test_tap_retry.py  test_validation.py
tests/fixtures/: gaia_cone.vot
