[project]
name = "astrodata-mcp"
version = "0.1.0"
description = "MCP server for querying public astronomical archives (ESO, Gaia, SIMBAD, VizieR, Keck KOA, Magellan)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "astroquery>=0.4.7",
    "pyvo>=1.5",
    "astropy>=6.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
]

[project.scripts]
astrodata-mcp = "astrodata_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/astrodata_mcp"]
